# rust-financial-platform

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  deny.toml  docker-compose.yml
api/: Cargo.toml
api/src/: lib.rs  main.rs
api/src/assets/: docs.html  swagger.json
api/src/routes/: error_handling.rs  mod.rs  pages.rs
k8s/: README.md  pgadmin_conf.yaml  postgresql_helm_conf.yaml  rfp_app_conf.yaml  rfp_secrets_conf.yaml  rtapp_conf.yaml  rtapp_secrets_conf.yaml
migration/src/: m20220101_000001_create_table.rs
migrations/: 20230718175857_trade.sql
pipeline/: Cargo.toml
pipeline/src/: get_trades.rs  lib.rs  main.rs  resample_trades.rs
src/: get_trades.rs  lib.rs  main.rs  resample_trades.rs
src/database/: mod.rs  prelude.rs  trade.rs
