[workspace]
members = ["api", "pipeline"]
resolver = "2"

[profile.dev.package."*"]
opt-level = 3

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1.16.1", features = ["full"] }
dotenvy = "0.15"
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
