[package]
name = "rust-trading-platform-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["headers", "macros"] }
axum-extra = { version = "0.7", features = ["erased-json"] }
tokio = { version = "1.13", features = ["full"] }
futures = "0.3"
dotenvy = "0.15"
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-async-std-native-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
