[package]
name = "rust-financial-platform-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["erased-json"] }
tokio = { version = "1.13", features = ["full"] }
futures-lite = "2"
dotenvy = "0.15"
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
