[package]
name = "rust-financial-platform-api"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["erased-json"] }
futures-lite = "2"
uuid = { version = "1.3", features = ["v4"] }
tokio = { workspace = true }
dotenvy = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
