[package]
name = "rust-trading-platform-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
tokio = { version = "1.16.1", features = ["sync", "full"] }
futures = "0.3.28"
futures-util = "0.3.28"
futures-channel = "0.3.28"
url = "2.4.0"
dotenvy = "0.15"
sqlx = { version = "0.7", features = [
    "sqlite",
    "runtime-async-std-native-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
