[package]
name = "rust-financial-platform-pipeline"
version.workspace = true
edition.workspace = true

[dependencies]
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
futures-util = "0.3.28"
url = "2.4.0"
tokio = { workspace = true }
dotenvy = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
